ubuntu-release-upgrader (1:16.04.9) UNRELEASED; urgency=medium

  * DistUpgrade/DistUpgradeController.py: fix typo in variable name for
    RELEASE_UPGRADER_ALLOW_THIRD_PARTY; this will help running with third-
    party mirrors in sources via just the environment variable for one-shot
    deals.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Tue, 29 Mar 2016 23:18:01 -0400

ubuntu-release-upgrader (1:16.04.8) xenial; urgency=medium

  * data/release-upgrades:
    - set the default upgrade prompt to "lts" instead of "normal" so that
      LTS users will only see the automatic upgrade prompt when the next LTS
      version is ready. (LP: #1550927)
  * update demoted.cfg, demoted.cfg.trusty, mirrors.cfg
  * DistUpgrade/DistUpgradeAptCdrom.py: fix double open. (LP: #1551929)

 -- Brian Murray <brian@ubuntu.com>  Thu, 03 Mar 2016 11:36:41 -0800

ubuntu-release-upgrader (1:16.04.7) xenial; urgency=medium

  [ Iain Lane ]
  * Keep fallback compatibility with Vte 2.90 and WebKit 1, required to run on
    14.04 (LP: #1548858)

 -- Brian Murray <brian@ubuntu.com>  Tue, 23 Feb 2016 14:55:51 -0800

ubuntu-release-upgrader (1:16.04.6) xenial; urgency=medium

  * utils/demotions.py: Set Apt::Architectures too so that the host's
    multiarch setup doesn't get in the way.
  * DistUpgrade/DistUpgradeViewGtk3.py,
    DistUpgrade/ReleaseNotesViewerWebkit.py: Port to WebKit 2 (LP: #1469221)

 -- Iain Lane <iain@orangesquash.org.uk>  Tue, 16 Feb 2016 15:09:37 +0000

ubuntu-release-upgrader (1:16.04.5) xenial; urgency=medium

  * DistUpgrade/DistUpgradeView.py: switch from package manager ResultFailed
    to RESULT_FAILED, apparently the former was obsoleted some time ago.
    (LP: #1292335)

 -- Brian Murray <brian@ubuntu.com>  Fri, 12 Feb 2016 10:27:15 -0800

ubuntu-release-upgrader (1:16.04.4) xenial; urgency=medium

  * DistUpgrade/DistUpgradeMain.py: check the apt cache to see what version of
    apt is installed rather than using the apt VERSION string. (LP: #1306065)