@@ -21,7 +21,6 @@ https://private-ppa.launchpad.net/commercial-ppa-uploaders
 
 
 ##===Australia===
-http://mirror.optus.net/ubuntu/
 ##===Austria===
 http://ubuntu.uni-klu.ac.at/ubuntu/
 http://gd.tuwien.ac.at/opsys/linux/ubuntu/archive/
@@ -33,7 +32,6 @@ ftp://ftp.cs.mun.ca/pub/mirror/ubuntu/
 #===China===
 #===CostaRica===
 #===CzechRepublic===
-http://ubuntu.supp.name/ubuntu/
 #===Denmark===
 http://mirrors.dotsrc.org/ubuntu/
 #===Estonia===
@@ -104,13 +102,11 @@ http://ubuntu.cn99.com/ubuntu/
 http://ftp.hosteurope.de/mirror/archive.ubuntu.com/
 http://ftp.u-picardie.fr/mirror/ubuntu/ubuntu/
 http://mirror.cc.columbia.edu/pub/linux/ubuntu/archive/
-http://tw.archive.ubuntu.com/ubuntu/
 http://ftp.ticklers.org/archive.ubuntu.org/ubuntu/
 http://ubuntu.univ-nantes.fr/ubuntu/
 http://ftp.vectranet.pl/ubuntu/
 http://ftp.citylink.co.nz/ubuntu/
 http://ftp.tu-chemnitz.de/pub/linux/ubuntu/
-http://ftp.unina.it/pub/linux/distributions/ubuntu/
 ftp://ftpserv.tudelft.nl/pub/Linux/archive.ubuntu.com/
 http://mirrors.nic.funet.fi/ubuntu/
 http://ubuntu.mirror.rafal.ca/ubuntu/
@@ -198,11 +194,9 @@ http://download.nus.edu.sg/mirror/ubuntu/
 http://ftp.availo.se/ubuntu/
 http://archive.ubuntumirror.dei.uc.pt/ubuntu/
 http://ftp.icm.edu.pl/pub/Linux/ubuntu/
-http://ftp.info.uvt.ro/ubuntu/
 http://ftp.lysator.liu.se/ubuntu/
 http://ftp.nsysu.edu.tw/Ubuntu/ubuntu/
 http://ftp.rrzn.uni-hannover.de/pub/mirror/linux/ubuntu/
-http://ubuntu.saix.net/ubuntu-archive/
 http://ftp.tku.edu.tw/ubuntu/
 http://ftp.tsukuba.wide.ad.jp/Linux/ubuntu/
 http://ftp.tu-chemnitz.de/pub/linux/ubuntu-ports/
@@ -263,7 +257,6 @@ http://www.club.cc.cmu.edu/pub/ubuntu/
 http://archive.ubuntu.nautile.nc/ubuntu/
 http://cosmos.cites.illinois.edu/pub/ubuntu/
 http://ftp.arnes.si/pub/mirrors/ubuntu/
-ftp://ftp.iitb.ac.in/distributions/ubuntu/archives/
 http://ftp.litnet.lt/ubuntu/
 ftp://ftp.rezopole.net/ubuntu/
 http://ftp.sjtu.edu.cn/ubuntu/
@@ -278,7 +271,6 @@ http://mirrors.bloomu.edu/ubuntu/
 http://ubuntu.mirrors.skynet.be/ubuntu/
 http://ubuntu.retrosnub.co.uk/ubuntu/
 http://ubuntu.securedservers.com/
-http://ubuntu.sth.sze.hu/ubuntu/
 http://us.archive.ubuntu.com/ubuntu/
 http://distrib-coffee.ipsl.jussieu.fr/pub/linux/ubuntu/
 http://kartolo.sby.datautama.net.id/ubuntu/
@@ -368,7 +360,6 @@ http://mirror.dhakacom.com/ubuntu-archive/
 http://mirror.htnshost.com/ubuntu/
 http://mirror.it.ubc.ca/ubuntu/
 http://ubuntu.lagoon.nc/ubuntu/
-http://mirror.os6.org/ubuntu/
 http://mirror.t-home.mk/ubuntu/
 http://mirror.zetup.net/ubuntu/
 http://mirror.zol.co.zw/ubuntu/
@@ -421,7 +412,6 @@ http://artfiles.org/ubuntu.com/
 http://mirrors.ccs.neu.edu/ubuntu/
 http://mirrors.maine.edu/ubuntu/
 http://ftp.klid.dk/ftp/ubuntu/
-http://ftp.roedu.net/mirrors/ubuntulinux.org/ubuntu/
 http://mirrors.nhanhoa.com/ubuntu/
 http://mirror.mythic-beasts.com/ubuntu/
 http://ftp.rz.tu-bs.de/pub/mirror/ubuntu-packages/
@@ -435,7 +425,6 @@ http://ubuntu.uni-sofia.bg/ubuntu/
 http://ftp.udc.es/ubuntu/
 http://ubnt-archive.xfree.com.ar/ubuntu/
 http://mirror.fairway.ne.jp/ubuntu/
-http://ubuntu.lionlike.com/ubuntu/
 http://mirror.idealhosting.net.tr/ubuntu/
 http://mirror.network32.net/ubuntu/
 http://pkg.adfinis-sygroup.ch/ubuntu/
@@ -443,7 +432,6 @@ http://repo.gust.edu.kw/ubuntu/
 http://ftp.ntua.gr/ubuntu/
 http://kadignaz.de/ubuntu/
 http://mirror.earthlink.iq/ubuntu/
-http://cermin.rumahilmu.org/ubuntu/
 http://mirror.stw-aachen.de/ubuntu/
 http://mirror.digistar.vn/ubuntu/
 http://mirrors.tuna.tsinghua.edu.cn/ubuntu/
@@ -455,4 +443,24 @@ http://mirror.scalabledns.com/ubuntu/
 http://mirrors.skyshe.cn/ubuntu/
 http://mirrors.noction.com/ubuntu/archive/
 http://mirror.adminbannok.com/ubuntu/
-http://mirrors.easynews.com/linux/ubuntu/
+http://mirror.lzu.edu.cn/ubuntu/
+http://mirror.netspace.net.au/pub/ubuntu/
+http://mirror.evolvedservers.com/ubuntu-archive/
+http://mirror.stjschools.org/public/ubuntu-archive/
+http://gaosu.rave.org/ubuntu/
+http://ftp.stust.edu.tw/pub/Linux/ubuntu/
+http://ubuntu.gnu.gen.tr/ubuntu/
+http://debian.linux.org.tw/ubuntu/
+http://mirrors.ulbsibiu.ro/ubuntu/
+http://mirrors.acm.jhu.edu/ubuntu/
+http://ubuntu.tsl.gr/
+http://mirror.tcc.wa.edu.au/ubuntu/
+http://ubuntu.uc3m.es/ubuntu/
+http://mirrors.neterra.net/ubuntu/
+ftp://ftp.man.szczecin.pl/pub/Linux/ubuntu/
+http://ftp.iinet.net.au/pub/ubuntu/
+http://mirror.sax.uk.as61049.net/archive.ubuntu.com/ubuntu/
+http://www.las.ic.unicamp.br/pub/ubuntu/
+http://ubuntu.ntc.net.np/ubuntu/
+http://ubuntu.parspack.com/ubuntu/
+http://mirror.n5tech.com/ubuntu/
