@@ -9,8 +9,10 @@ dpkg-checkbuilddeps -d 'python3-apt, apt-btrfs-snapshot, parsewiki, python-feedp
 			python3-mock, xvfb, gir1.2-gtk-3.0, python3-gi, python3-nose, pep8, python3-distutils-extra'
 
 # update demotions
+# echo "Running demotions"
 (cd utils && ./demotions.py wily xenial > demoted.cfg)
 # when this gets enabled, make sure to add symlink in DistUpgrade
+# echo "Running lts demotions"
 (cd utils && ./demotions.py trusty xenial > demoted.cfg.trusty)
 
 # update apt_btrfs_snapshot.py copy, this needs an installed
@@ -34,13 +36,15 @@ fi
 
 # cleanup
 rm -rf utils/apt/lists utils/apt/*.bin
+# echo "Running update mirrors"
 (cd utils && ./update_mirrors.py ../data/mirrors.cfg)
 
 # run the test-suite
-#echo "Running integrated tests"
+# echo "Running integrated tests"
 xvfb-run nosetests3
 
 # test leftovers
+# echo "Cleaning up after tests"
 rm -f ./tests/data-sources-list-test/apt.log
 
 # update version
