@@ -42,7 +42,9 @@ cliff-tablib
 clvm
 cpp-4.7
 cpp-4.7-doc
+deja-dup-backend-gvfs
 dh-php5
+dialog
 empathy
 empathy-common
 empathy-dbg
@@ -55,8 +57,10 @@ evolution-plugins
 facter
 finch
 finch-dev
+fltk1.1-doc
 folks-common
-fonts-droid
+fonts-ipafont-gothic
+fonts-ipafont-mincho
 fonts-wqy-microhei
 fop
 fop-doc
@@ -100,6 +104,8 @@ gnutls-bin
 gtk2-engines
 gtk2-engines-pixbuf
 hiera
+htmldoc
+htmldoc-common
 human-theme
 icedtea-netx
 icedtea-netx-common
@@ -121,7 +127,10 @@ lib64objc-4.7-dev
 lib64stdc++-5-dev-powerpc-cross
 lib64stdc++6-powerpc-cross
 lib64ubsan0-powerpc-cross
+libapache2-mod-php5
 libarchive-extract-perl
+libatk-wrapper-java
+libatk-wrapper-java-jni
 libbatik-java
 libboost-log-dev
 libboost-log1.58-dev
@@ -129,11 +138,9 @@ libboost-log1.58.0
 libc6-armel-armhf-cross
 libc6-dev-armel-armhf-cross
 libchamplain-0.12-0
-libchamplain-0.12-dbg
 libchamplain-0.12-dev
 libchamplain-doc
 libchamplain-gtk-0.12-0
-libchamplain-gtk-0.12-dbg
 libchamplain-gtk-0.12-dev
 libchamplain-gtk-doc
 libck-connector-dev
@@ -148,9 +155,14 @@ libcloog-ppl-dev
 libcloog-ppl1
 libcolord-gtk-dev
 libcolord-gtk1
-libelfg0
-libelfg0-dev
+libcommons-net2-java
+libcommons-net2-java-doc
+libcuda1-352
+libcuda1-352-updates
 libevolution
+libfltk1.1
+libfltk1.1-dbg
+libfltk1.1-dev
 libfolks-dbg
 libfolks-dev
 libfolks-dummy-dbg
@@ -179,6 +191,7 @@ liblldb-3.5-dev
 libllvm-3.6-ocaml-dev
 libllvm3.5-dbg
 libllvm3.5v5
+liblog-log4perl-perl
 liblog-message-perl
 liblog-message-simple-perl
 libmalaga-dev
@@ -204,9 +217,12 @@ libppl-doc
 libpst-dev
 libpst4
 libpst4-dbg
+libpth-dev
+libpth20
 libpurple-bin
 libpurple-dev
 libpurple0
+libreoffice-style-human
 libs3-2
 libs3-dev
 libsaxon-java
@@ -223,11 +239,15 @@ libsfstdc++-5-dev-armhf-cross
 libsfstdc++6-armhf-cross
 libsfubsan0-armhf-cross
 libstdc++6-4.7-dev
+libtcl8.5
+libtcl8.5-dbg
 libtelepathy-logger-dev
 libtelepathy-logger-doc
 libtelepathy-logger3
 libtelepathy-logger3-dbg
 libterm-ui-perl
+libtk8.5
+libtk8.5-dbg
 libtomcat7-java
 libvala-0.28-0
 libvala-0.28-0-dbg
@@ -274,27 +294,39 @@ malaga-bin
 malaga-doc
 mcp-account-manager-uoa
 module-init-tools
+munin
+munin-common
+munin-doc
+munin-node
+munin-plugins-core
+munin-plugins-extra
 nbd-client
 numlockx
+nvidia-opencl-icd-352
+nvidia-opencl-icd-352-updates
 oneconf
 oneconf-common
 opencryptoki
-openjdk-7-demo
-pdksh
 phonon-backend-gstreamer
 phonon-backend-gstreamer-common
 phonon-backend-gstreamer-dbg
 phonon4qt5-backend-gstreamer
 phonon4qt5-backend-gstreamer-dbg
 php5
+php5-cgi
+php5-common
 php5-curl
+php5-dbg
+php5-dev
 php5-gd
 php5-gmp
+php5-json
 php5-ldap
 php5-mysql
 php5-odbc
 php5-pgsql
 php5-pspell
+php5-readline
 php5-recode
 php5-snmp
 php5-sqlite
@@ -308,6 +340,7 @@ pidgin-dev
 pidgin-libnotify
 ppl-dev
 pst-utils
+pth-dbg
 pulseaudio-esound-compat
 pulseaudio-module-droid
 pulseaudio-module-gconf
@@ -320,12 +353,15 @@ puppet
 puppet-common
 puppetmaster
 puppetmaster-common
+python-aptdaemon
+python-aptdaemon.gtk3widgets
 python-avahi
 python-characteristic
 python-convoy
 python-crochet
 python-cups
 python-curtin
+python-debian
 python-debtagshw
 python-dirspec
 python-distro-info
@@ -334,13 +370,20 @@ python-django-south
 python-django16
 python-djorm-ext-pgarray
 python-dns
+python-geoip
 python-gi-cairo
+python-httpretty
+python-jingo
+python-jingo-doc
 python-lldb-3.5
 python-mocker
 python-ntdb
 python-ntdb-dbg
 python-oneconf
 python-piston-mini-client
+python-renderpm
+python-reportlab
+python-reportlab-accel
 python-seamicroclient
 python-simplestreams
 python-tablib
@@ -349,8 +392,10 @@ python-ubuntu-sso-client
 python-ubuntuone-devtools
 python-zeitgeist
 python3-characteristic
+python3-jingo
 python3-oneconf
 python3-piston-mini-client
+python3-smbc
 qt3d5-dbg
 qt3d5-dev
 qt3d5-examples
@@ -369,6 +414,9 @@ software-center-aptdaemon-plugins
 ssh-askpass-gnome
 sshfs
 sshfs-dbg
+tcl8.5
+tcl8.5-dev
+tcl8.5-doc
 telepathy-gabble
 telepathy-gabble-dbg
 telepathy-haze
@@ -380,7 +428,9 @@ telepathy-mission-control-5
 telepathy-mission-control-5-dbg
 telepathy-salut
 telepathy-salut-dbg
-tmake
+tk8.5
+tk8.5-dev
+tk8.5-doc
 tomcat7
 tomcat7-admin
 tomcat7-common
@@ -402,6 +452,8 @@ vala-0.28-doc
 valac-0.28
 valac-0.28-dbg
 valac-0.28-vapi
+vblade
+watershed
 wodim
 xdelta3
 xserver-xorg-video-cirrus
