@@ -53,8 +53,10 @@ cpp-4.8-arm-linux-gnueabihf
 cpp-4.8-doc
 cpp-4.8-powerpc-linux-gnu
 cpp-4.8-powerpc64le-linux-gnu
+deja-dup-backend-gvfs
 dh-linktree
 dh-xsp
+dialog
 dvipng
 empathy
 empathy-common
@@ -69,8 +71,10 @@ facter
 finch
 finch-dev
 firefox-globalmenu
+fltk1.1-doc
 folks-common
-fonts-droid
+fonts-ipafont-gothic
+fonts-ipafont-mincho
 fonts-wqy-microhei
 fop
 fop-doc
@@ -145,6 +149,8 @@ gobjc-4.8
 gstreamer0.10-plugins-base-apps
 gtk2-engines
 gtk3-engines-unico
+htmldoc
+htmldoc-common
 human-theme
 ibus-pinyin
 icedtea-netx
@@ -194,6 +200,7 @@ lib64stdc++6-4.7-dbg
 lib64stdc++6-4.7-dev
 lib64stdc++6-4.8-dbg
 lib64stdc++6-powerpc-cross
+libapache2-mod-php5
 libarchive-extract-perl
 libart2.0-cil
 libart2.0-cil-dev
@@ -201,6 +208,8 @@ libasan0
 libasan0-armhf-cross
 libasan0-dbg
 libasan0-powerpc-cross
+libatk-wrapper-java
+libatk-wrapper-java-jni
 libbatik-java
 libboost-chrono-dev
 libc6-armel-armhf-cross
@@ -211,16 +220,19 @@ libck-connector-dev
 libck-connector0
 libcloog-ppl-dev
 libcloog-ppl1
+libcommons-net2-java
+libcommons-net2-java-doc
 libcrypt-passwdmd5-perl
 libcuda1-331
 libcuda1-331-updates
 libeasymock-java
 libeasymock-java-doc
-libelfg0
-libelfg0-dev
 libept-dev
 libevolution
 libexporter-lite-perl
+libfltk1.1
+libfltk1.1-dbg
+libfltk1.1-dev
 libfolks-dbg
 libfolks-dev
 libfolks-eds-dbg
@@ -241,6 +253,7 @@ libgcj14
 libgcj14-awt
 libgcj14-dbg
 libgcj14-dev
+libgconf2-4
 libgconf2.0-cil
 libgconf2.0-cil-dev
 libgfortran-4.7-dev
@@ -271,6 +284,7 @@ libjavascriptcoregtk-3.0-dev
 libjline-java
 libjline-java-doc
 libjs-raphael
+liblog-log4perl-perl
 liblog-message-simple-perl
 libmalaga-dev
 libmalaga7
@@ -312,6 +326,8 @@ libppl-doc
 libpst-dev
 libpst4
 libpst4-dbg
+libpth-dev
+libpth20
 libpurple-bin
 libpurple-dev
 libpurple0
@@ -348,6 +364,7 @@ libqtxml4-perl
 libqtxmlpatterns4-perl
 librabbitmq-dbg
 librabbitmq-dev
+libreoffice-style-human
 libs3-2
 libs3-dev
 libsaxon-java
@@ -403,6 +420,8 @@ libstdc++6-4.7-dev
 libstdc++6-4.7-doc
 libstdc++6-4.8-dbg
 libtagcoll2-dev
+libtcl8.5
+libtcl8.5-dbg
 libtelepathy-logger-dev
 libtelepathy-logger-doc
 libtelepathy-logger3
@@ -411,6 +430,8 @@ libterm-size-perl
 libterm-ui-perl
 libtext-csv-perl
 libtext-csv-xs-perl
+libtk8.5
+libtk8.5-dbg
 libtomcat7-java
 libtree-dagnode-perl
 libubuntu-location-service-dev
@@ -472,6 +493,12 @@ module-init-tools
 monodoc-browser
 monodoc-manual
 monodoc-webkit-manual
+munin
+munin-common
+munin-doc
+munin-node
+munin-plugins-core
+munin-plugins-extra
 nbd-client
 numlockx
 nvidia-libopencl1-304
@@ -484,23 +511,27 @@ obex-data-server
 oneconf
 oneconf-common
 opencryptoki
-openjdk-7-demo
 openvswitch-pki
-pdksh
 perlqt-dbg
 perlqt-dev
 phonon-backend-gstreamer
 phonon-backend-gstreamer-common
 phonon-backend-gstreamer-dbg
 php5
+php5-cgi
+php5-common
 php5-curl
+php5-dbg
+php5-dev
 php5-gd
 php5-gmp
+php5-json
 php5-ldap
 php5-mysql
 php5-odbc
 php5-pgsql
 php5-pspell
+php5-readline
 php5-recode
 php5-snmp
 php5-sqlite
@@ -519,6 +550,7 @@ pkg-config-powerpc-linux-gnu
 pkg-config-powerpc64le-linux-gnu
 ppl-dev
 pst-utils
+pth-dbg
 pulseaudio-esound-compat
 pulseaudio-module-gconf
 pulseaudio-module-jack
@@ -536,6 +568,8 @@ pyqt5-examples
 python-amqplib
 python-amqplib-doc
 python-appindicator
+python-aptdaemon
+python-aptdaemon.gtk3widgets
 python-avahi
 python-billiard
 python-celery
@@ -547,6 +581,7 @@ python-crochet
 python-cups
 python-curtin
 python-d2to1
+python-debian
 python-debtagshw
 python-dirspec
 python-distro-info
@@ -555,11 +590,13 @@ python-django-piston
 python-django-south
 python-djorm-ext-pgarray
 python-dns
+python-geoip
 python-gi-cairo
 python-gtk-vnc
 python-hp3parclient
 python-hplefthandclient
 python-hplefthandclient-doc
+python-httpretty
 python-iscpy
 python-jsonrpclib
 python-mailer
@@ -578,6 +615,9 @@ python-piston-mini-client
 python-pocketsphinx
 python-pytyrant
 python-pyudev
+python-renderpm
+python-reportlab
+python-reportlab-accel
 python-sane
 python-sane-dbg
 python-seamicroclient
@@ -648,9 +688,13 @@ software-center-aptdaemon-plugins
 soprano-daemon
 sphinx-voxforge-hmm-en
 sphinx-voxforge-lm-en
+squid-deb-proxy
 ssh-askpass-gnome
 sshfs
 sshfs-dbg
+tcl8.5
+tcl8.5-dev
+tcl8.5-doc
 telepathy-gabble
 telepathy-gabble-dbg
 telepathy-haze
@@ -662,7 +706,9 @@ telepathy-mission-control-5
 telepathy-mission-control-5-dbg
 telepathy-salut
 thunderbird-globalmenu
-tmake
+tk8.5
+tk8.5-dev
+tk8.5-doc
 tomcat7
 tomcat7-admin
 tomcat7-common
@@ -683,9 +729,11 @@ unity-scope-gmusicbrowser
 unity-scope-gourmet
 unity-scope-guayadeque
 unity-scope-musique
+vblade
 virt-manager
 virtinst
 virtuoso-opensource-6.1-common
+watershed
 wodim
 x11-xfs-utils
 x11proto-print-dev
@@ -700,7 +748,6 @@ xserver-xorg-video-openchrome
 xserver-xorg-video-openchrome-dbg
 xserver-xorg-video-r128
 xserver-xorg-video-r128-dbg
-xserver-xorg-video-s3
 xserver-xorg-video-savage
 xserver-xorg-video-siliconmotion
 xserver-xorg-video-sisusb
